# Project-5B-Telemedicine-Application

./: .gitignore  README.md
.github/workflows/: BuildBackend.yaml  BuildFrontend.yaml  BuildRocket.yaml
backend/: .gitignore  Cargo.toml  Rocket.toml  diesel.toml  example.env
backend/migrations/2021-08-28-180242_mysql_init/: down.sql  up.sql
backend/migrations/2021-09-05-210519_init/: up.sql
backend/migrations/2021-10-26-164816_added reports/: down.sql  up.sql
backend/src/: main.rs
backend/src/api/: mod.rs  web.rs
backend/src/api/core/: accounts.rs  mod.rs  reports.rs
backend/src/db/: mod.rs
backend/src/db/models/: mod.rs  reports.rs  user.rs
backend/src/db/schema/sqlite/: schema.rs
backend/src/db/schemas/sqlite/: schema.rs
backend/src/utils/: auth.rs  cache.rs  cors.rs  crypto.rs  error.rs  files.rs  headers.rs  mod.rs  settings.rs
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/components/: HelloWorld.vue
frontend/src/firebase/: firebaseInit.js
frontend/src/plugins/: vuetify.ts
frontend/src/router/: index.ts
frontend/src/store/: index.ts
frontend/src/views/: About.vue  Account.vue  Appointments.vue  Home.vue  Login.vue  PatientPortal.vue  ProviderPortal.vue  Registration.vue
frontend/src/views/html/: account.html  docchat.html  login.html  patientchat.html  (+3 more)
telemedicine-frontend/: README.md  package-lock.json  package.json
telemedicine-frontend/src/components/: HelloWorld.vue
telemedicine-frontend/src/router/: index.ts
telemedicine-frontend/src/views/: Home.vue  Login.vue  login.html
(+15 files in other folders)
