[package]
name = "Project-5B-Telemedicine-Application"
version = "0.1.0"
authors = ["Axioms"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_contrib = "0.4.10"

# JWT library
jsonwebtoken = "7.2.0"

# uuid
uuid = { version = "0.8.1", features = ["serde", "v4"] }

# Crypto
ring = "0.16.20"

#json
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.56"

# data base
diesel = { version = "1.4.5", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"

# Bundled SQLite
#libsqlite3-sys = { version = "0.22.2", features = ["bundled"], optional = true }
libsqlite3-sys = { version = "^0", features = ["bundled"] }

# qr code
qrcode = "0.12.0"
oxide-auth = "0.5.0"

# date time
chrono = "0.4"

# File changer detection
notify = "4.0.15"

# Websocket
tokio-tungstenite = "0.15.0"